# deep-glacier-inventory

./: .env.example  .gitignore  README.md  pyproject.toml
notebooks/: 01-geometry-download.ipynb  01-outline-download.ipynb  02-grid-creation.ipynb  create_grid.ipynb  gee-s2.ipynb  odc-stac.ipynb
notebooks/archive/: dem-download.ipynb  odc-stac.ipynb
src/deepfreezer/: download.py  grid.py  utils.py
