[project]
name = "deepfreezer"
version = "0.1.0"
description = "Contains the code for the Deep Glacier Inventory project."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cartopy>=0.24.1",
    "contextily>=1.6.2",
    "dask[distributed]>=2025.5.0",
    "dotenv>=0.9.9",
    "ee>=0.2",
    "gdal>=3.11.0",
    "gdown>=5.2.0",
    "geedim>=1.9.1",
    "geemap>=0.35.3",
    "geopandas>=1.0.1",
    "iprogress>=0.4",
    "leafmap>=0.46.0",
    "localtileserver>=0.10.6",
    "majortom-eg>=0.2.0",
    "matplotlib>=3.10.3",
    "odc-stac>=0.4.0",
    "pandas>=2.2.3",
    "planetary-computer>=1.0.0",
    "pygeohash>=3.1.3",
    "pykdtree>=1.4.1",
    "pystac-client>=0.8.6",
    "rioxarray>=0.19.0",
    "scipy>=1.15.3",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "xarray>=2025.4.0",
]

[tool.uv.sources]
deepfreezer = { workspace = true }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
